force-app/main/default/objects/RollUpOveruse__c/RollUpOveruse__c.object-meta.xml
<CustomObject>
    <label>RollUpOveruse</label>
    <nameField>
        <label>RollUpOveruse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RollUpOveruses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>