force-app/main/default/objects/RollUpOveruse__c/fields/RollUpOveruseDetail10__c.field-meta.xml
<CustomField>
    <fullName>RollUpOveruseDetail10__c</fullName>
    <label>RollUpOveruseDetail10</label>
    <summaryForeignKey>RollUpOveruseChild__c.RollUpOveruse__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>