force-app/main/default/objects/RollUpOveruse__c/fields/RollUpOveruseDetail11__c.field-meta.xml
<CustomField>
    <fullName>RollUpOveruseDetail11__c</fullName>
    <label>RollUpOveruseDetail11</label>
    <summaryForeignKey>RollUpOveruseChild__c.RollUpOveruse__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>