force-app/main/default/objects/RollUpOveruse__c/fields/RollUpOveruseDetail12__c.field-meta.xml
<CustomField>
    <fullName>RollUpOveruseDetail12__c</fullName>
    <label>RollUpOveruseDetail12</label>
    <summaryForeignKey>RollUpOveruseChild__c.RollUpOveruse__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>